objects/OSR__c.object
<CustomObject>
    <description>Operational Service Request</description>
    <fields>
        <fullName>Address_City__c</fullName>
        <description>Used for Credit Card expedited shipping address
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Address City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Used for Credit Card expedited shipping address
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Used for Credit Card expedited shipping address
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Postal_Code__c</fullName>
        <description>Used for Credit Card expedited shipping address
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Address Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <description>Used for Credit Card expedited shipping address
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>2 Letter State Abbreviation</inlineHelpText>
        <label>Address State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_To_Name__c</fullName>
        <description>Used for Credit Card expedited shipping address
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>To use the card holder&apos;s default address, blank out all address fields and save the record.</inlineHelpText>
        <label>Address To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisory_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to feed the creation of a new Credit Portfolio</description>
        <label>Advisory Profile</label>
        <referenceTo>ABC_Profile__c</referenceTo>
        <relationshipLabel>OSRs</relationshipLabel>
        <relationshipName>OSRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Received__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Echosign form received from Contact</inlineHelpText>
        <label>Agreement Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Sent__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Echosign form sent to Contact</inlineHelpText>
        <label>Agreement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Verify Agreement is attached and correct</inlineHelpText>
        <label>Agreement Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Alert Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <description>This field is to store the email body of a Credit Card Alert message, which is received by the CreditCardAlertService Apex Email Service.
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Body of alert email message</inlineHelpText>
        <label>Alert Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Summary__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Alert Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available_Credit__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>null</formula>
        <label>zzzAvailable Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Employee_Number__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF(NOT(ISBLANK(Related_Card__c)),Related_Card__r.Card_Employee_Number__c,&apos;&apos;)</formula>
        <label>Card Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Expiration__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Related_Card__r.Card_Expiration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Holder_First_Name__c</fullName>
        <description>used in email communication templates</description>
        <formula>Related_Card__r.Card_Holder_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>Related_Card__r.Card_Holder_First_Name__c + &apos; &apos; +  Related_Card__r.Card_Holder_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <formula>IF( NOT(  ISBLANK(Related_Card__r.Card_Number__c) ) , &apos;XXXX-XXXX-XXXX-&apos;+RIGHT(Related_Card__r.Card_Number__c, 4), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzzCard Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>Used in email communication templates</description>
        <formula>Contact__r.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OSRs</relationshipLabel>
        <relationshipName>OSRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expedited_Processing_Approval__c</fullName>
        <description>Used for Expedited Shipping option on Credit Card Replacement
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <inlineHelpText>Indicate Approval of Alternate (Overnight) Shipping Method</inlineHelpText>
        <label>Alternate Delivery Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Address__c</fullName>
        <formula>IF( 
	OR(
		ISPICKVAL(Contact__r.Personal_Address_Country__c, &apos;&apos;),
		ISPICKVAL(Contact__r.Personal_Address_Country__c, &apos;US&apos;),
		ISPICKVAL(Contact__r.Personal_Address_Country__c, &apos;USA&apos;),
		ISPICKVAL(Contact__r.Personal_Address_Country__c, &apos;United States&apos;)
	),
	False,
	True
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>International Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Account_Balance__c</fullName>
        <description>used in email communication template</description>
        <formula>Related_Card__r.Payment_Account__r.Account_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portfolio_Credit_Limit__c</fullName>
        <description>used in email communication template</description>
        <formula>Related_Card__r.Payment_Account__r.zzzCredit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Origin: CR-2089 - CreditCardAdmin
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Related Card</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Credit_Card__c.Payment_Account__r.Card_Holder__c</field>
                <operation>equals</operation>
                <valueField>$Source.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Credit_Card__c</referenceTo>
        <relationshipLabel>OSRs</relationshipLabel>
        <relationshipName>OSRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Request Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreadable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeded Credit Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Risk Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Code / MCC Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Expiration Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid CVV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>New ABC Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Meetings Payment Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement ABC Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement Meetings Payment Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement ABC Credit Card (Alternate Delivery)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate ABC Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate Meetings Payment Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline Alert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Updated by Credit Card Request from Travel Portal
        
        Origin: CR-2089 - CreditCardAdmin</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Origin: CR-2089 - CreditCardAdmin</description>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OSR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Request_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Card_Alert_Queue</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Origin__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Card Alert Queue</label>
        <queue>Card_Alert_Queue</queue>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Card_Replacement_Requests</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Origin__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Cancellation_Reason__c</columns>
        <columns>Related_Card__c</columns>
        <columns>Address_Updated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Replacement ABC Credit Card,Replacement ABC Credit Card (Expedited)</value>
        </filters>
        <label>Card Replacement Requests</label>
        <queue>Card_Request_Queue</queue>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Card_Request_Queue</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Queue</filterScope>
        <label>Card Request Queue</label>
        <queue>Card_Request_Queue</queue>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Request,OSR__c.Credit_Card_Alert</value>
        </filters>
        <label>Credit Card - All</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Credit Card - Cancelled</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Complete</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Credit Card - Complete</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Decline_Alerts</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Alert</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Decline Alert</value>
        </filters>
        <label>Credit Card - Decline Alerts</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Fraud_Alerts</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Alert</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Fraud Alert</value>
        </filters>
        <label>Credit Card - Fraud Alerts</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Credit Card - In Progress</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Pending_Application</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Application</value>
        </filters>
        <label>Credit Card - Pending Application</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Credit_Card_Pending_Finance</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OSR__c.Credit_Card_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Finance</value>
        </filters>
        <label>Credit Card - Pending Finance</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OSR_All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Contact__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Agreement_Sent__c</columns>
        <columns>Agreement_Received__c</columns>
        <columns>Origin__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>OSR - All</label>
        <sharedTo>
            <group>Credit_Card_Admins</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>OSR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSRs</pluralLabel>
    <recordTypes>
        <fullName>Credit_Card_Alert</fullName>
        <active>true</active>
        <description>An Alert on a credit card generated by the card vendor or other system activity</description>
        <label>Credit Card Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card_Request</fullName>
        <active>true</active>
        <description>Submit a credit card, payment account, other request to Finance</description>
        <label>Credit Card Request</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>VR_Advisory_Profile_Req_New_OSR</fullName>
        <active>true</active>
        <description>Created for CR-20151013-9317.</description>
        <errorConditionFormula>AND( 
	RecordType.DeveloperName  = &quot;Credit_Card_Request&quot;, 
	ISPICKVAL(Request_Type__c, &quot;New ABC Credit Card&quot;),
	OR(
          ISPICKVAL(Status__c, &quot;In Progress&quot;),
          ISPICKVAL(Status__c, &quot;Complete&quot;)
        ),
	ISBLANK(Advisory_Profile__c) 
)</errorConditionFormula>
        <errorDisplayField>Advisory_Profile__c</errorDisplayField>
        <errorMessage>Advisory Profile must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ValidateAddressForExpediatedDelivery</fullName>
        <active>true</active>
        <description>Created for CR-20140515-5525</description>
        <errorConditionFormula>AND(
	RecordType.DeveloperName = &quot;Credit_Card_Request&quot;,
	OR(
		ISPICKVAL(Request_Type__c, &quot;Replacement ABC Credit Card (Alternate Delivery)&quot;),
		ISPICKVAL(Expedited_Processing_Approval__c, &quot;Approved&quot;)
	),
	OR(
		ISNULL(Address_To_Name__c),
		ISBLANK(Address_To_Name__c),
		ISNULL(Address_Line_1__c),
		ISBLANK(Address_Line_1__c),
		ISNULL(Address_City__c),
		ISBLANK(Address_City__c),
		ISNULL(Address_State__c),
		ISBLANK(Address_State__c),
		ISNULL(Address_Postal_Code__c),
		ISBLANK(Address_Postal_Code__c)
	)
)</errorConditionFormula>
        <errorDisplayField>Address_City__c</errorDisplayField>
        <errorMessage>A full Address must be specified for requests with Expedited shipping.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_ValidateRelatedCard</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISBLANK(Related_Card__c),
 OR(
  CONTAINS( TEXT(Request_Type__c), &apos;Replacement&apos;),
  CONTAINS(TEXT(Request_Type__c), &apos;Deactivate&apos;)
 ) 
)</errorConditionFormula>
        <errorDisplayField>Related_Card__c</errorDisplayField>
        <errorMessage>Related Card is required for replace or deactivation request.</errorMessage>
    </validationRules>
</CustomObject>